# COMAN_key-frame-editor

./: .gitignore  BSpline.cpp  BSpline.h  BSplinePath.cpp  BSplinePath.h  Branch.cpp  Branch.h  CJoint.cpp  CJoint.h  CLink.cpp  CLink.h  CMakeLists.txt  CSkeleton.cpp  CSkeleton.h  Camera.cpp  Camera.h  Channel.cpp  Channel.h  Chrono.cpp  Chrono.h  Clock.cpp  Clock.h  Cube.cpp  Cube.h  Cube_DEPRECATED.h  Explosion.cpp  Explosion.h  FFD.cpp  FFD.h  InputHandler.cpp  InputHandler.h  Keyframe.cpp  Keyframe.h  LSystem.cpp  LSystem.h  Lights.cpp  Lights.h  LinInterp.cpp  LinearPath.cpp  LinearPath.h  (+48 more)
base_models/: camera.blend  camera.mtl  green_cube.mtl  orange_dot.mtl  red_dot.mtl
gui/: EditJointWindow.cpp  EditJointWindow.h  EditSAAChannelWindow.cpp  EditSAAChannelWindow.h  MainMenuBar.cpp  MainMenuBar.h  RenderEngineWindow.cpp  RenderEngineWindow.h  SceneWindow.cpp  SceneWindow.h  TimelineWindow.cpp  TimelineWindow.h  WindowRenderEngine.cpp  WindowRenderEngine.h
old_code/: BSpline_old.cpp  BSpline_old.h  Chrono_old.cpp  Chrono_old.h  Cube_DEPRECATED.cpp  Lights_DEPRECATED.cpp  Lights_DEPRECATED.h  Mover_old.cpp  Mover_old.h  Object_DEPRECATED.cpp  Path_old.cpp  Path_old.h  SkyBox_DEPRECATED.cpp  SkyBox_DEPRECATED.h
shaders/: color_picking_shader.vert  new_shader.frag  new_shader.vert  shader.vert  skybox.vert  standard.vert
shaders/deprecated/: color_picking_shader.frag  simple_shader.vert
